--- a/assets/languages/template.json
+++ b/assets/languages/template.json
@@ -427,6 +427,7 @@
   "loginFirst": "Login first",
   "anonymous": "Anonymous",
   "didYouFindAnyProblemWithThisItem": "Did you find any problem with this item?",
+  "didYouFindAnyProblemWithThisService": "Did you find any problem with this service?",
   "areYouSureToCreateThisItemAsAFeaturedAd": "Are you sure to create this item as a featured ad?",
   "reset": "Reset",
   "no": "No",
@@ -462,6 +463,7 @@
   "enterCountry": "Enter Country",
   "countryRequired": "Country is required. Please add a country",
   "reportThisAd": "Report this ad",
+  "reportThisService": "Report this service",
   "yourAdsAndTransactionDelete": "Your ads and transactions history will be deleted.",
   "accDetailsCanNotRecovered": "Account details can't be recovered.",
   "subscriptionsCancelled": "Subscriptions will be cancelled.",
@@ -573,5 +575,28 @@
   "cameraImages": "Camera Images",
   "pickedImages": "Picked Images",
   "chatSendHint": "Type your message",
-  "sharedFailed": "Shared Failed"
+  "sharedFailed": "Shared Failed",
+  "AD":"AD",
+  "Service":"Service",
+  "SearchAnyService":"Search Services",
+  "ServiceDetails":"Service Details",
+  "Opening times":"Opening Times",
+  "Vacation day":"Vacation day",
+  "Open":"Open",
+  "Close":"Close",
+  "Monday":"Monday",
+  "Thursday":"Thursday",
+  "Friday":"Friday",
+  "Saturday":"Saturday",
+  "Tuesday":"Tuesday",
+  "Sunday":"Sunday",
+  "Wednesday":"Wednesday",
+  "service":"Service",
+  "all":"all",
+  "Status":"Status",
+  "previewService":"previewService",
+  "submittedServiceSuccess": "Your Service \n Submitted Successfully",
+  "liveServices":"live Services",
+  "serviceLive":"live Services"
+
 }
